feat: add more routes
