# apps/api/spec/openapi.yaml
@@ -15,8 +15,12 @@ components:
       properties:
         id:
           type: string
+          minLength: 1
+          maxLength: 8
         name:
           type: string
+          minLength: 1
+          maxLength: 24
       required:
         - id
         - name
@@ -88,7 +92,43 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemDetails"
-  /users/{userId}:
+    post:
+      operationId: createUser
+      description: Userを作成
+      tags:
+        - user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                  maxLength: 24
+              required:
+                - name
+      responses:
+        "200":
+          description: 正常応答
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "400":
+          description: リクエスト不正
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+        "500":
+          description: エラー応答
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+  /users/:id:
     get:
       operationId: getUserByUserId
       description: 指定したIdのUserを取得
@@ -100,7 +140,7 @@ paths:
             minLength: 1
             maxLength: 8
           required: true
-          name: userId
+          name: id
           in: path
       responses:
         "200":
@@ -109,6 +149,90 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+        "400":
+          description: リクエスト不正
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+        "404":
+          description: 存在しないユーザー
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+        "500":
+          description: エラー応答
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+    put:
+      operationId: updateUser
+      description: 指定したIdのUserを更新
+      tags:
+        - user
+      parameters:
+        - schema:
+            type: string
+            minLength: 1
+            maxLength: 8
+          required: true
+          name: id
+          in: path
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                  maxLength: 24
+              required:
+                - name
+      responses:
+        "200":
+          description: 正常応答
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "400":
+          description: リクエスト不正
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+        "404":
+          description: 存在しないユーザー
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+        "500":
+          description: エラー応答
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+    delete:
+      operationId: removeUser
+      description: 指定したIdのUserを削除
+      tags:
+        - user
+      parameters:
+        - schema:
+            type: string
+            minLength: 1
+            maxLength: 8
+          required: true
+          name: id
+          in: path
+      responses:
+        "204":
+          description: 正常応答
         "400":
           description: リクエスト不正
           content:
