# apps/api/src/presenter/createUser.ts
@@ -4,14 +4,20 @@ import { problemDetail } from '~/presenter/schema/promlem-details'
 import { userSchema } from '~/presenter/schema/user'
 import { logger } from '~/utils/log'
 
-export const getUserByIdRoute = createRoute({
-  method: 'get',
-  path: '/users/:id',
-  operationId: 'getUserByUserId',
-  description: '指定したIdのUserを取得',
+export const createUserRoute = createRoute({
+  method: 'post',
+  path: '/users',
+  operationId: 'createUser',
+  description: 'Userを作成',
   tags: ['user'],
   request: {
-    params: userSchema.pick({ id: true }),
+    body: {
+      content: {
+        'application/json': {
+          schema: userSchema.omit({ id: true }),
+        },
+      },
+    },
   },
   responses: {
     200: {
@@ -22,10 +28,6 @@ export const getUserByIdRoute = createRoute({
       description: 'リクエスト不正',
       content: { 'application/json': { schema: problemDetail } },
     },
-    404: {
-      description: '存在しないユーザー',
-      content: { 'application/json': { schema: problemDetail } },
-    },
     500: {
       description: 'エラー応答',
       content: { 'application/json': { schema: problemDetail } },
@@ -33,8 +35,8 @@ export const getUserByIdRoute = createRoute({
   },
 })
 
-export const getUserByIdHandler: RouteHandler<typeof getUserByIdRoute> = (ctx) => {
-  const param = ctx.req.valid('param')
-  logger.info({ param }, 'getUserByIdHandler')
-  return ctx.json({ id: param.id, name: 'john' })
+export const createUserHandler: RouteHandler<typeof createUserRoute> = (ctx) => {
+  const body = ctx.req.valid('json')
+  logger.info({ body }, 'createUserHandler')
+  return ctx.json({ id: 'TODO', name: body.name })
 }
